@@ -9,6 +9,7 @@ META.yml
 README
 t/01base.t
 t/10query.t
+t/11query.t
 t/90podtest.t
 t/91podcover.t
 t/94metatest.t
