@@ -3,6 +3,7 @@ Revision history for CPAN-Testers-WWW-Reports-Query-Reports
 
         - realignment of bad data tests.
         - added timeout skips.
+        - added non-live tests.
 
 0.08	2014-09-28
         - fixed license fields in META.json to be lists.
